portail_d4c/css/visualisation.css
/* ... */
.leaflet-control-filterview.active a{background-color:#000}
.leaflet-control-filterview.active a::after{color:#fff}
.leaflet-control-attribution img{vertical-align:bottom}
.d4cwidget-map__map--with-searchbox .leaflet-top.leaflet-left{top:45px}
.d4cwidget-map__map--with-display-control .leaflet-top.leaflet-right{-webkit-transition:right .25s ease-in;transition:right .25s ease-in;right:310px}
@media (max-width:767px){.d4cwidget-map__map--with-display-control .leaflet-top.leaflet-right.collapsed{right:40px}
}
.d4cwidget-map .map-timezone-caption{color:rgba(0,0,0,.5);font-size:.85em;padding-top:.5em}
.d4cwidget-map-display-control{position:absolute;top:10px;-webkit-box-shadow:0 1px 5px rgba(0,0,0,.65);box-shadow:0 1px 5px rgba(0,0,0,.65);border-radius:4px;-webkit-transition:right .25s ease-in;transition:right .25s ease-in}
@media (max-width:767px){.d4cwidget-map-display-control{right:-260px}
}
@media (min-width:768px){.d4cwidget-map-display-control{right:10px}
}
@media (max-width:767px){.d4cwidget-map-display-control--expanded{right:10px}
}
.d4cwidget-map-display-control__toggle{background-color:#fff;border:none;position:absolute;top:100px;right:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;font-size:1.33rem;padding:0;width:1em;height:2em;border-radius:4px 0 0 4px;-webkit-box-shadow:0 1px 5px rgba(0,0,0,.65);box-shadow:0 1px 5px rgba(0,0,0,.65)}
@media (min-width:768px){.d4cwidget-map-display-control__toggle{display:none}
}
.d4cwidget-map-display-control__toggle:hover{background-color:#f4f4f4}
.d4cwidget-map-display-control__groups,.d4cwidget-map-display-control__no-groups{width:300px;overflow-y:auto;margin:0;padding:10px;background-color:#fff;min-height:150px;max-height:calc(100% - 2*10px);border-radius:4px}
.d4cwidget-map-display-control__groups{list-style:none;position:relative}
.d4cwidget-map-display-control__no-groups{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
.d4cwidget-map-display-control__group{margin-left:0;-webkit-transition:margin-left .2s,border-left-width .2s,opacity .2s;transition:margin-left .2s,border-left-width .2s,opacity .2s;border:solid 1px #E5E5E5;border-left-width:5px;padding:5px}
.d4cwidget-map-display-control__group:hover{background-color:#f4f4f4}
.d4cwidget-map-display-control__group:not(:last-child){margin-bottom:10px}
.d4cwidget-map-display-control__group--disabled{margin-left:20px;border-left-width:1px;opacity:.5}
.d4cwidget-map-display-control__group--not-toggleable[ng-click]{cursor:auto}
.d4cwidget-map-display-control__group-title{font-size:1.1rem;color:#2C3F56;font-weight:600;text-overflow:ellipsis;overflow:hidden;display:inline}
.d4cwidget-map-display-control__group-title--error{color:#C42B23}
.d4cwidget-map-display-control__picto{display:inline-block;vertical-align:sub}
.d4cwidget-map-display-control__group-description--error,.d4cwidget-map-display-control__group-title--error,.d4cwidget-map-display-control__picto--error{color:#C42B23}
.d4cwidget-map-display-control__group-description{text-overflow:ellipsis;white-space:normal;overflow:hidden}
.d4cwidget-map-search-box{position:absolute;left:0;top:0;padding:10px;background-color:transparent;-webkit-transition:background-color .1s,width .25s ease;transition:background-color .1s,width .25s ease;z-index:8}
@media (max-width:767px){.d4cwidget-map-search-box{width:100px}
}
@media (min-width:768px){.d4cwidget-map-search-box{width:420px}
}
@media (max-width:767px){.d4cwidget-map-search-box--expanded{width:100%}
}
.d4cwidget-map-search-box__toggle{position:absolute;top:0;bottom:0;right:4px;background-color:#fff;border:none;width:20px;padding:0;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-size:1.33rem}
@media (min-width:768px){.d4cwidget-map-search-box__toggle{display:none}
}
.d4cwidget-map-search-box__box-wrapper{position:relative}
.d4cwidget-map-search-box__box-wrapper:before{font-family:FontAwesome;content:'\f002';position:absolute;left:5px;top:0;bottom:0;line-height:2;font-size:1.4rem;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
html[dir=rtl] .d4cwidget-map-search-box__box-wrapper:before{right:5px;left:auto}
.d4cwidget-map-search-box__box{padding-left:3ch;padding-right:3ch;width:100%;font-size:1.2rem;line-height:2;outline:0;-webkit-transition:border-color .1s;transition:border-color .1s;border-radius:4px;-webkit-box-shadow:0 1px 5px rgba(0,0,0,.65);box-shadow:0 1px 5px rgba(0,0,0,.65);border:none}
.d4cwidget-map-search-box__box--datasearch{border-color:rgba(0,0,0,.1)}
.d4cwidget-map-search-box__box-cancel{position:absolute;right:5px;top:0;bottom:0;border:none;background-color:transparent;outline:0}
html[dir=rtl] .d4cwidget-map-search-box__box-cancel{left:5px;right:auto}
.d4cwidget-map-search-box__suggestions{background-color:#fff;list-style:none;margin:0;padding:0;border:solid 1px #90A4AE}
@media (max-width:767px){.d4cwidget-map-search-box__suggestions{max-height:0;opacity:0;overflow:hidden}
}
@media (max-width:767px){.d4cwidget-map-search-box__suggestions--expanded{max-height:none;opacity:1;overflow:inherit}
}
.d4cwidget-map-search-box__suggestions:hover{cursor:pointer}
.d4cwidget-map-search-box__suggestion{padding:10px;border-top:solid 1px #E5E5E5}
.d4cwidget-map-search-box__suggestion em{font-style:normal;font-weight:600}
.d4cwidget-map-search-box__suggestion--selected{color:#EC643C}
.d4cwidget-map-search-box__search-suggestion{padding:10px;border-top:solid 1px #E5E5E5}
.d4cwidget-map-search-box__search-suggestion:first-child{border-top:none}
/* ... */

